<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/dark_purple">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash"
        android:padding="16dp">

        <ImageView
            android:id="@+id/signup_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:src="@drawable/signup" />

        <LinearLayout
            android:id="@+id/hello_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello_text"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail Id"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_btn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/create_account"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_layout"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/login_text_view_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
