<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B183BC"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/choose"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/anonymous_btn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/anonymous_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anonymous"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/login_types_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_types"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/anonymous_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>